[tool.poetry]
name = "WpBrokenCheck"
version = "0.1.0"
description = "A script to check broken links on any WordPress website."
authors = ["Suleman-Elahi <sul007@outlook.com>", "Felix Mertineit <fmertineit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
